Removed all hard coded paths and icons

--- a/views/control.ejs
+++ b/views/control.ejs
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
+
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="icon" href="https://i1.wp.com/stagtv.co.uk/wp-content/uploads/2018/08/cropped-stagtv-favicon-1.png?fit=32%2C32" sizes="32x32">
-    <link rel="icon" href="https://i1.wp.com/stagtv.co.uk/wp-content/uploads/2018/08/cropped-stagtv-favicon-1.png?fit=192%2C192" sizes="192x192">
-    <title>Chilton.tv – Tally Control</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="icon" href="img/icon/Yellow32.png" sizes="32x32">
+    <link rel="icon" href="img/icon/Yellow192.png" sizes="192x192">
+    <title><%= serverName %> – Tally Controller</title>
+    <link href="css/fonts.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/jQuery.js"></script>
     <script type="text/javascript">
       let CamNum = 0;
       let client = false;
