--- a/views/servers.ejs
+++ b/views/servers.ejs
@@ -16,6 +16,9 @@
   </head>
   <body>
     <header id="n_new">
+      <div class="versionInfo">
+        WebTally v<%= version %>
+      </div>
       <div class="n_newCont">
         <div>Search for severs to add to the network</div>
         <input name="url" id="url" placeholder="Server IP/URL">
