--- a/views/servers.ejs
+++ b/views/servers.ejs
@@ -23,7 +23,7 @@
         <div>Search for severs to add to the network</div>
         <input name="url" id="url" placeholder="Server IP/URL">
       </div>
-      <button id="new" class="headerButton">Search</button>
+      <button id="new" class="headerButton green">Search</button>
 
       <button class="n_configDev headerButton blue">Show Devices</button>
       <button class="n_configInpt headerButton purple">Virtual Mixer</button>
