--- a/public/css/servers.css
+++ b/public/css/servers.css
@@ -63,7 +63,7 @@ body {
   margin-right: 40px;
   margin-bottom: 20px;
   width: 300px;
-  border-radius: 20px;
+  border-radius: 10px;
   justify-content: space-between;
   overflow: hidden;
   transition: 0.3s;
@@ -98,7 +98,7 @@ body {
   background-image: url(../img/server.svg);
   background-position: center;
   background-repeat: no-repeat;
-  height: 150px;
+  height: 250px;
   margin: 20px;
 }
 
@@ -202,32 +202,40 @@ body {
 
 .green {
   background-color: rgb(65, 127, 63);
+  border-top: 1px solid #459942 !important;
 }
 .red {
   background-color: rgb(127, 63, 63);
+  border-top: 1px solid #954f4f !important;
 }
 .blue {
   background-color: rgb(63, 106, 127);
+  border-top: 1px solid #4c8099 !important;
 }
 .purple {
   background-color: rgb(122, 63, 127);
+  border-top: 1px solid rgb(153, 83, 159) !important;
 }
 .green:hover {
-  background-color: rgb(0, 226, 25);
-  color: rgb(16, 16, 16);
+  background-color: rgb(40, 181, 56);
+  border-top: 1px solid #3ce34f !important;
 }
 .red:hover {
   background-color: rgb(213, 3, 3);
+  border-top: 1px solid #ff5f5f !important;
 }
 .blue:hover {
   background-color: rgb(0, 171, 255);
+  border-top: 1px solid #62cafd !important;
 }
 .purple:hover {
   background-color: rgb(206, 0, 223);
+  border-top: 1px solid rgb(242, 83, 255) !important;
 }
 
 .n_bttns {
   display: flex;
+  margin: 5px;
 }
 .n_bttns button {
   flex: 1;
@@ -238,7 +246,9 @@ body {
   color: white;
   transition: 0.3s;
   padding: 0;
-  margin: 0;
+  margin: 5px;
+  border-radius: 5px;
+  border-top: 1px solid transparent;
 }
 
 .headerButton {
@@ -248,7 +258,9 @@ body {
   transition: 0.3s;
   color: white;
   font-size: 150%;
-  padding: 15px;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
 }
 
 #n_new {
@@ -258,19 +270,14 @@ body {
   transition: 0.3s;
   justify-content: end;
   grid-area: Header;
+  padding: 2px;
 }
 #new {
-  border: 0;
   width: 150px;
-  background-color: rgb(65, 127, 63);
   cursor: pointer;
   transition: 0.3s;
   color: white;
   font-size: 150%;
-}
-#new:hover {
-  background-color: rgb(0, 226, 25);
-  color: rgb(16, 16, 16);
 }
 .n_newCont {
   display: flex;
