--- a/public/css/servers.css
+++ b/public/css/servers.css
@@ -1,319 +1,297 @@
 body {
-  background-color: black;
-  font-family: raleway;
-  font-variant-numeric: lining-nums;
-  margin: 0px;
-  display: grid; 
-  grid-template-columns: 1fr 4px 0.5fr;
-  gap: 0px 0px; 
-  grid-template-areas: 
-    "Header Header Header" "Main LogsDrag Logs" "Footer Footer Footer"; 
-  height: 100vh;
-  grid-template-rows: min-content 1fr min-content;
+ background-color:#000;
+ font-family:raleway;
+ font-variant-numeric:lining-nums;
+ margin:0;
+ display:grid;
+ grid-template-columns:1fr 4px .5fr;
+ gap:0 0;
+ grid-template-areas:"Header Header Header" "Main LogsDrag Logs" "Footer Footer Footer";
+ height:100vh;
+ grid-template-rows:min-content 1fr min-content
 }
-
 .disconnected::after {
-  content: "Disconnected";
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  display: inline;
-  font-size: 600%;
-  z-index: 3;
-  background-color: rgba(0, 0, 0, 0.46);
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  line-height: 80vh;
-  top: 0;
-  left: 0;
+ content:"Disconnected";
+ position:fixed;
+ width:100%;
+ height:100%;
+ text-align:center;
+ display:inline;
+ font-size:600%;
+ z-index:3;
+ background-color:rgba(0,0,0,.46);
+ color:#fff;
+ font-weight:700;
+ line-height:80vh;
+ top:0;
+ left:0
 }
-
 #n_logs {
-  grid-area: Logs;
-  overflow: auto;
-  display: flex;
-  flex-direction: column-reverse;
+ grid-area:Logs;
+ overflow:auto;
+ display:flex;
+ flex-direction:column-reverse
 }
-
 #serverLogs {
-  flex: 1;
-  font-family: Roboto Mono;
-  font-size: 10pt;
-  padding: 2px 4px;
-  background: repeating-linear-gradient( -55deg, #222, #222 10px, #232323 10px, #232323 20px );
+ flex:1;
+ font-family:Roboto Mono;
+ font-size:10pt;
+ padding:2px 4px;
+ background:repeating-linear-gradient( -55deg,#222,#222 10px,#232323 10px,#232323 20px )
 }
-
 #LogsDrag {
-	background: #545454;
-	grid-area: LogsDrag;
-	cursor: ew-resize;
+ background:#545454;
+ grid-area:LogsDrag;
+ cursor:ew-resize
 }
-
 #n_servers {
-  padding: 60px;
-  grid-column-start: 1;
-  resize: horizontal;
-}
-
-.n_server {
-  color: white;
-  display: flex;
-  flex-direction: column;
-  margin-right: 40px;
-  margin-bottom: 20px;
-  width: 300px;
-  border-radius: 10px;
-  justify-content: space-between;
-  overflow: hidden;
-  transition: 0.3s;
+ padding:60px;
+ grid-column-start:1;
+ resize:horizontal;
+ display: flex;
+ flex-wrap: wrap;
 }
 .n_server {
-  background-color: rgba(255, 255, 255, 0.33);
+ color:#fff;
+ display:flex;
+ flex-direction:column;
+ margin-right:40px;
+ margin-bottom:20px;
+ width:300px;
+ border-radius:10px;
+ justify-content:space-between;
+ overflow:hidden;
+ transition:.3s;
+ height: fit-content;
 }
-
+.n_server {
+ background-color:rgba(255,255,255,.33)
+}
 .n_status {
-  padding: 7px 15px;
-  font-size: 156%;
-  text-align: center;
-  flex: 0;
+ padding:7px 15px;
+ font-size:156%;
+ text-align:center;
+ flex:0
 }
-
 .n_server.n_online .n_status::before {
-  content: "Online";
+ content:"Online"
 }
-
 .n_server .n_status::before {
-  content: "Offline";
+ content:"Offline"
 }
-
 .n_server.n_online .n_status {
-  background-color: rgb(0, 150, 59);
+ background-color:#00963b
 }
 .n_server .n_status {
-  background-color: rgb(163, 0, 0);
+ background-color:#a30000
 }
-
 .n_img {
-  background-image: url(../img/server.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 250px;
-  margin: 20px;
+ background-image:url(../img/server.svg);
+ background-position:center;
+ background-repeat:no-repeat;
+ height:250px;
+ margin:20px
 }
-
 .log {
-  color: white;
-  white-space: break-spaces;
+ color:#fff;
+ white-space:break-spaces
 }
-
 .cyanLog {
-  color: cyan;
+ color:cyan
 }
 .greenLog {
-  color: lime;
+ color:lime
 }
 .purpleLog {
-  color: #fe00fe;
+ color:#fe00fe
 }
 .blueLog {
-  color: blue;
+ color:blue
 }
 .yellowLog {
-  color: yellow;
+ color:#ff0
 }
 .redLog {
-  color: red;
+ color:red
 }
 .whiteLog {
-  color: white;
+ color:#fff
 }
-
-
 .whiteLog.dimLog {
-  color: #969696;
+ color:#969696
 }
 .greenLog.dimLog {
-  color: #005800;
+ color:#005800
 }
 .redLog.dimLog {
-  color: darkred;
+ color:darkred
 }
 .purpleLog.dimLog {
-  color: purple;
+ color:purple
 }
 .blueLog.dimLog {
-  color: #2d2dc9;
+ color:#2d2dc9
 }
 .yellowLog.dimLog {
-  color: #9a9a00;
+ color:#9a9a00
 }
 .cyanLog.dimLog {
-  color: #009e9e;
+ color:#009e9e
 }
-
-
-
 .tbl {
-  display: table;
-  width: 100%;
+ display:table;
+ width:100%
 }
 .tblRow {
-  display: table-row;
+ display:table-row
 }
 .tblCell {
-  display: table-cell;
-  padding: 0px 5px 8px 8px;
+ display:table-cell;
+ padding:0 5px 8px 8px
 }
 .tblCell button {
-  width: 100%;
-  padding: 5px;
-  border: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  color: white;
-  font-size: 100%;
-  transition: 0.3s;
+ width:100%;
+ padding:5px;
+ border:0;
+ border-radius:5px;
+ cursor:pointer;
+ color:#fff;
+ font-size:100%;
+ transition:.3s
 }
-
 .flxRow {
-  display: flex;
-  flex-direction: row;
+ display:flex;
+ flex-direction:row
 }
-
 .flxCol {
-  display: flex;
-  flex-direction: column;
+ display:flex;
+ flex-direction:column
 }
-
 .n_offline button {
-  cursor: not-allowed;
-  background-color: rgb(126, 126, 126);
+ cursor:not-allowed;
+ background-color:#7e7e7e;
+ border-top: 1px solid #8f8f8f !important;
 }
 .n_offline button:hover {
-  cursor: not-allowed;
-  background-color: rgb(126, 126, 126);
-  color: white;
+ cursor:not-allowed;
+ background-color:#7e7e7e;
+ color:#fff;
+ border-top: 1px solid #8f8f8f !important;
 }
-
 .rotate {
-  transform: rotateZ(72deg);
+ transform:rotateZ(72deg)
 }
-
 .green {
-  background-color: rgb(65, 127, 63);
-  border-top: 1px solid #459942 !important;
+ background-color:#417f3f;
+ border-top:1px solid #459942!important
 }
 .red {
-  background-color: rgb(127, 63, 63);
-  border-top: 1px solid #954f4f !important;
+ background-color:#7f3f3f;
+ border-top:1px solid #954f4f!important
 }
 .blue {
-  background-color: rgb(63, 106, 127);
-  border-top: 1px solid #4c8099 !important;
+ background-color:#3f6a7f;
+ border-top:1px solid #4c8099!important
 }
 .purple {
-  background-color: rgb(122, 63, 127);
-  border-top: 1px solid rgb(153, 83, 159) !important;
+ background-color:#7a3f7f;
+ border-top:1px solid #99539f!important
 }
 .green:hover {
-  background-color: rgb(40, 181, 56);
-  border-top: 1px solid #3ce34f !important;
+ background-color:#28b538;
+ border-top:1px solid #3ce34f!important
 }
 .red:hover {
-  background-color: rgb(213, 3, 3);
-  border-top: 1px solid #ff5f5f !important;
+ background-color:#d50303;
+ border-top:1px solid #ff5f5f!important
 }
 .blue:hover {
-  background-color: rgb(0, 171, 255);
-  border-top: 1px solid #62cafd !important;
+ background-color:#00abff;
+ border-top:1px solid #62cafd!important
 }
 .purple:hover {
-  background-color: rgb(206, 0, 223);
-  border-top: 1px solid rgb(242, 83, 255) !important;
+ background-color:#ce00df;
+ border-top:1px solid #f253ff!important
 }
-
 .n_bttns {
-  display: flex;
-  margin: 5px;
+ display:flex;
+ margin:5px
 }
 .n_bttns button {
-  flex: 1;
-  border: 0;
-  height: 42px;
-  font-size: 110%;
-  cursor: pointer;
-  color: white;
-  transition: 0.3s;
-  padding: 0;
-  margin: 5px;
-  border-radius: 5px;
-  border-top: 1px solid transparent;
+ flex:1;
+ border:0;
+ height:42px;
+ font-size:110%;
+ cursor:pointer;
+ color:#fff;
+ transition:.3s;
+ padding:0;
+ margin:5px;
+ border-radius:5px;
+ border-top:1px solid transparent
 }
-
 .headerButton {
-  border: 0;
-  min-width: 150px;
-  cursor: pointer;
-  transition: 0.3s;
-  color: white;
-  font-size: 150%;
-  padding: 10px;
-  margin: 5px;
-  border-radius: 5px;
+ border:0;
+ min-width:150px;
+ cursor:pointer;
+ transition:.3s;
+ color:#fff;
+ font-size:150%;
+ padding:10px;
+ margin:5px;
+ border-radius:5px
 }
-
 #n_new {
-  background-color: rgba(255, 255, 255, 0.33);
-  display: flex;
-  overflow: hidden;
-  transition: 0.3s;
-  justify-content: end;
-  grid-area: Header;
-  padding: 2px;
+ background-color:rgba(255,255,255,.33);
+ display:flex;
+ overflow:hidden;
+ transition:.3s;
+ justify-content:end;
+ grid-area:Header;
+ padding:2px
 }
 #new {
-  width: 150px;
-  cursor: pointer;
-  transition: 0.3s;
-  color: white;
-  font-size: 150%;
+ width:150px;
+ cursor:pointer;
+ transition:.3s;
+ color:#fff;
+ font-size:150%
 }
 .n_newCont {
-  display: flex;
-  flex-direction: column;
-  padding: 6px;
+ display:flex;
+ flex-direction:column;
+ padding:6px
 }
 .n_newCont * {
-  margin: 5px;
+ margin:5px
 }
 .n_newCont div {
-  color: white;
+ color:#fff
 }
-#port:focus, #name:focus {
-  box-shadow: inset 0px 0px 3px rgb(27, 0, 218);
-  border: 1px solid rgb(114, 110, 222);
+#port:focus,
+#name:focus {
+ box-shadow:inset 0 0 3px #1b00da;
+ border:1px solid #726ede
 }
-#port, #name {
-  padding: 5px;
-  margin: 7px;
-  border-radius: 8px;
-  border: 1px solid rgb(126, 126, 126);
-  background-color: rgb(220, 220, 220);
-  font-size: 110%;
-  width: 150px;
-  box-shadow: inset 0px 0px 3px rgb(65, 65, 65);
-  transition: 0.5s;
+#port,
+#name {
+ padding:5px;
+ margin:7px;
+ border-radius:8px;
+ border:1px solid #7e7e7e;
+ background-color:#dcdcdc;
+ font-size:110%;
+ width:150px;
+ box-shadow:inset 0 0 3px #414141;
+ transition:.5s
 }
-
 .t_rght {
-  text-align: right;
+ text-align:right
 }
-
 .versionInfo {
-  align-self: center;
-  margin-right: auto;
-  padding-left: 20px;
-  font-size: 25pt;
-  color: white;
+ align-self:center;
+ margin-right:auto;
+ padding-left:20px;
+ font-size:25pt;
+ color:#fff
 }
