--- a/views/config.ejs
+++ b/views/config.ejs
@@ -10,7 +10,9 @@
     <script type="text/javascript" src="js/jQuery.js"></script>
     <script type="text/javascript">
       let servers = ['<%= host %>'];
+      let productionID = <%= prodID %>;
     </script>
+    <script type="text/javascript" src="js/commonWS.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <link rel="stylesheet" href="css/tally.css">
   </head>
