Major code refactor

--- a/views/config.ejs
+++ b/views/config.ejs
@@ -11,6 +11,8 @@
     <script type="text/javascript">
       let servers = ['<%= host %>'];
       let productionID = <%= prodID %>;
+      const version = '<%= version %>';
+      const protocol = '<%= protocol %>';
     </script>
     <script type="text/javascript" src="js/commonWS.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
