--- a/views/tally.ejs
+++ b/views/tally.ejs
@@ -12,6 +12,8 @@
       let CamNum = <%= camera %>;
       let productionID = <%= prodID %>;
       let servers = ["<%= host %>"];
+      const version = '<%= version %>';
+      const protocol = '<%= protocol %>';
     </script>
     <script type="text/javascript" src="js/commonWS.js"></script>
     <script type="text/javascript" src="js/tally.js"></script>
